[package]
name = "a1"
version = "0.1.0"
authors = ["Keon Ye <jnuyeyizhou@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://www.tetraceratops.com"
repository = "https://github.com/keonjoe/a1"
documentation = "https://www.tetraceratops.com/docs"
description = """This is a test crate"""

[dependencies]
